--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Путь к конфигурационному файлу
-CONFIG_PATH=C:/path/to/config.yaml
+CONFIG_PATH=C:/Users/djoke/Documents/MyProjects/Code/GO/Go_SteamDB/configs/local.yaml
