--- a/configs/local.yaml
+++ b/configs/local.yaml
@@ -1,9 +1,9 @@
 env: "local"
 http_server:
-  address: "localhost:8082"
+  address: "0.0.0.0:8082"
   timeout: 4s
 sql_config:
-  host: "localhost"
+  host: "db"
   port: 5432
   user: "postgres"
   password: "1"
